# Rexy

./: .gitignore  README.md
activate/: CMakeLists.txt  package.xml
activate/launch/: pc.py  rexy.py
camera/: CMakeLists.txt  package.xml
camera/src/: RasPiCamPublisherNode.cpp
joystick/: CMakeLists.txt  package.xml
joystick/src/: Joystick.cpp
lcd_meneger/src/: lcd_writer.py  lcd_writer.py.save
log/: latest_build
motor_control/: CMakeLists.txt  package.xml
motor_control/config/: leg_config.yaml
motor_control/include/motor_control/: LegControl.h  kinematics.h
motor_control/src/: LegControl.cpp
movement_manager/: CMakeLists.txt  package.xml
movement_manager/config/: movement_manager_config.yaml
movement_manager/include/movement_manager/: StabilityControl.h
movement_manager/src/: MovementManager.cpp
raspicam2_node/cfg/: params.yaml  params.yaml.save
rexy_description/: CMakeLists.txt  package.xml
rexy_description/gazebo/worlds/: empty_world.world
rexy_description/launch/: rexy_gazebo.launch.py  rexy_rviz.launch.py
rexy_description/src/urdf/: rexy_model.sdf  rexy_model.urdf
rexy_description/urdf/: rexy_model.urdf  rexy_model.urdf.xacro
rexy_motor_control/: CMakeLists.txt  package.xml
rexy_motor_control/config/: .rexy_motor_config.yaml.swp  rexy_motor_config.yaml
rexy_motor_control/include/: motor_control.h
rexy_motor_control/include/JHPWMDriver/src/: JHPWMPCA9685.cpp  JHPWMPCA9685.h
rexy_motor_control/include/rexy_motor_control/: motor_control.h
rexy_motor_control/script/: rqt_1_0.py  rqt_1_0.py.save
rexy_motor_control/src/: motor_control.cpp  motor_control.cpp.save  motor_control.cpp.save.1  motor_control_cal.cpp
rexy_movement_manager/: CMakeLists.txt  package.xml
rexy_movement_manager/config/: rexy_motor_config.yaml
rexy_movement_manager/src/: kinematics.cpp  kinematics.hpp  movement_manager.cpp  movement_manager.cpp.save
rexy_msg/: CMakeLists.txt  package.xml
rexy_msg/msg/: Leg.msg  Leg_old.msg
rexy_msg/srv/: LegListState.srv
sensor_intrface/: package.xml  setup.cfg  setup.py
sensor_intrface/launch/: imu_publiser_launch.py
sensor_intrface/sensor_intrface/: imu_publiser.py  sonar.py  sonar_publiser.py
teency_ros_imu_sonar/: ros_imu_sonar.ino
teency_ros_imu_sonar/ros_imu_sonar/: ros_imu_sonar.ino
teency_ros_imu_sonar/ros_imu_sonar_improve/: ros_imu_sonar_improve.ino
uros/controllers_code/gripper_controller/: gripper_controller.ino
uros/micro_ros_msgs/: CMakeLists.txt
visualizer/: package.xml  setup.py
visualizer/launch/: launch.py
visualizer/rviz/: rviz_config.rviz
visualizer/visualizer/: Visualizer.py
